[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/server_00.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Server.gd" type="Script" id=2]
[ext_resource path="res://Graphics/server_lights_00.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Server" type="Area2D"]
collision_layer = 4
script = ExtResource( 2 )
running_color = Color( 0, 0, 1.5, 1 )
broken_color = Color( 1.5, 0, 0, 1 )

[node name="BackSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Lights" type="Sprite" parent="BackSprite"]
self_modulate = Color( 1, 0, 0, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Server_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Server_body_exited"]
[connection signal="state_changed" from="." to="." method="_on_Server_state_changed"]
